# spx-credit-spread-calculator

./: .gitignore  AGENTS.md  README.md  app.js  core.js  index.html  pages-deploy-trigger-2026-04-08.txt  pyproject.toml  styles.css  supabase_schema.sql  verification_report.md  verify_core.js  verify_dom.js
app/: app.py
backtest/: __init__.py  data.py  engine.py  models.py
strategies/: __init__.py  base.py  example_gap_strategy.py
tests/: test_engine.py
tests/fixtures/: options_minutes.csv  spx_minutes.csv  vix1d_minutes.csv
